# tira-puristin

./: .travis.yml  CMakeLists.txt  README.md
doc/: Doxyfile.in  maarittely.md  suoritusohje.md  testaus.md  toteutus.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
doc/doxygen/: abstract__code_8h_source.html  annotated.html  binary__tree_8h.html  binary__tree_8h__dep__incl.map  binary__tree_8h__dep__incl.md5  binary__tree_8h__incl.map  binary__tree_8h__incl.md5  binary__tree_8h_source.html  bit__reader_8cpp.html  bit__reader_8cpp__incl.map  bit__reader_8cpp__incl.md5  bit__reader_8h.html  bit__reader_8h__dep__incl.map  bit__reader_8h__dep__incl.md5  bit__reader_8h__incl.map  bit__reader_8h__incl.md5  bit__reader_8h_source.html  bit__writer_8cpp.html  bit__writer_8cpp__incl.map  bit__writer_8cpp__incl.md5  bit__writer_8h.html  bit__writer_8h__dep__incl.map  bit__writer_8h__dep__incl.md5  bit__writer_8h__incl.map  bit__writer_8h__incl.md5  bit__writer_8h_source.html  classAbstractCode-members.html  classAbstractCode.html  classAbstractCode__inherit__graph.map  classAbstractCode__inherit__graph.md5  classBinaryTree-members.html  classBinaryTree.html  classBinaryTree__coll__graph.map  classBinaryTree__coll__graph.md5  classBinaryTree__inherit__graph.map  classBinaryTree__inherit__graph.md5  classBitReader-members.html  classBitReader.html  classBitReader__coll__graph.map  classBitReader__coll__graph.md5  (+143 more)
doc/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_2.js  (+19 more)
src/: CMakeLists.txt  abstract_code.cpp  abstract_code.h  binary_tree.h  bit_reader.cpp  bit_reader.h  bit_writer.cpp  bit_writer.h  cli.cpp  cli.h  file_analyzer.cpp  file_analyzer.h  huffman_code.cpp  huffman_code.h  lzw_code.cpp  lzw_code.h  lzw_dictionary.cpp  lzw_dictionary.h  main.cpp  priority_queue.h
test/: CMakeLists.txt  test_binary_tree.cpp  test_bit_reader.cpp  test_bit_writer.cpp  test_file_analyzer.cpp  test_huffman_code.cpp  test_lzw_code.cpp  test_lzw_dictionary.cpp  test_main.cpp  test_performance.cpp  test_priority_queue.cpp
